working example with trajectory reconstruction merged by dbscan 2024:08.01: 162201_test

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,9 @@ outpace_decision_transformer.code-workspace
 a.png
 playground.py
 .vscode/launch.json
+*/*.png
+*.png
+playground*
+*experiment*
+*.npy
+*.json
